# hypruler

./: CLAUDE.md  Cargo.toml  README.md  justfile
.github/workflows/: release.yml
aur/: PKGBUILD-bin.template  PKGBUILD.template
src/: capture.rs  edge_detection.rs  main.rs  render.rs  ui.rs  wayland_handlers.rs
